--- a/index.html
+++ b/index.html
@@ -54,9 +54,12 @@
                             <label for="first">County and Municipal Elections</label>
                             <div class="nested-burger-links">
                                 <li class="link"><a href="child_pages/cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/commercial_township_committee.html">Commercial Township Committee</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/downe_township_committee.html">Downe Township Committee</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a></li>
+
                                 <!-- <li class="link"><a href="child_pages/cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a></li>
-                                <li class="link"><a href="child_pages/cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/vineland_city_council_2024.html">Vineland City Council</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/vineland_mayor_2024.html">Vineland Mayor</a></li>                                 -->
                             </div>
@@ -93,8 +96,12 @@
                             <label for="fourth">Issues</label>
                             <div class="nested-burger-links">
                                 <li class="link"><a href="child_pages/cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/commercial_township_issues.html">Commercial Township Issues</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/downe_township_issues.html">Downe Township Issues</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/lawrence_township_issues.html">Lawrence Township Issues</a></li>
+
                                 <li class="link"><a href="child_pages/cc-elections/state_assembly_legislative_district_1_issues.html">State Assembly - Legislative District 1 Issues</a></li>
-                                <li class="link"><a href="child_pages/cc-elections/state_assembly_legislative_district_3.html_issues">State Assembly - Legislative District 3 Issues</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/state_assembly_legislative_district_3_issues.html">State Assembly - Legislative District 3 Issues</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/governor_issues.html">Governor Issues</a></li>
                                 <!-- <li class="link"><a href="child_pages/cc-elections/cc_county_clerk_issues.html">County Clerk Issues</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/millville_city_issues.html">Millville City Issues</a></li>
@@ -216,6 +223,10 @@
                     <div class="elections-dropdown-links">
                         <!-- <a href="child_pages/cc-elections/official_ballots_2024.html">Official Ballots Page</a> -->
                         <a href="child_pages/cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a>
+                        <a href="child_pages/cc-elections/commercial_township_committee.html">Commercial Township Committee</a>
+                        <a href="child_pages/cc-elections/downe_township_committee.html">Downe Township Committee</a>
+                        <a href="child_pages/cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a>
+
                         <a href="child_pages/cc-elections/state_assembly_legislative_district_1.html">State Assembly - 1st Legislative District</a>
                         <a href="child_pages/cc-elections/state_assembly_legislative_district_3.html">State Assembly - 3rd Legislative District</a>
                         <a href="child_pages/cc-elections/governor.html">Governor</a>
