--- a/child_pages/cc-elections/Candidates/tisa.html
+++ b/child_pages/cc-elections/Candidates/tisa.html
@@ -138,7 +138,7 @@
          </div>
      </div>
      <div class="candidate-pic-box">
-         <img class="cover" src="../../../assets/candidates/" class="candidate-pic">
+         <img class="cover" src="../../../assets/candidates/tisa.jpg" class="candidate-pic">
          <div class="candidate-pic-box-content">
              <h4 class="sub-heading">Websites</h4>
              <div class="website">
