--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -120,36 +120,19 @@
             
             <div class="event-card">
                 <ul class="event-info">
-                    <li class="name"><strong>Andy Kim and Curtis Bashaw Debate</strong></li>
-                    <li class="description">Watch the candidates for US Senate debate<a href="https://www.facebook.com/groups/781111154116727/permalink/874759091418599/?rdid=NNVH6JEIaDEN96hf&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2Fp%2FncEjhYwThm4uQign">InformTheVoteNJ Facebook Group Post</a></li>
-                    <li class="date-and-time">10/6/24 - 8:00pm</li>
-                    <li class="location">Various Online Sites, Check Facebook Post</li>
+                    <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
+                    <li class="description">Listen to Party Messaging and potentially meet Republican candidates<a href="https://www.ccrrogop.org/event-calendar">InformTheVoteNJ Facebook Group Post</a></li>
+                    <li class="date-and-time">10/6/24 - 8:30am</li>
+                    <li class="location">Mauricetown Fire Company, 9544 Noble St. Mauricetown, NJ 08349</li>
+                    <li class="RSVP">dgeno2383@gmail.com on or before that week's Tuesday</li>
                 </ul>
             </div>     
 
             <div class="event-card">
                 <ul class="event-info">
-                    <li class="name"><strong>CCRRO Breakfast Meeting</strong></li>
-                    <li class="description">Hear messaging from local Republicans and meet local republicans<a href="https://www.ccrrogop.org/event-calendar">Cumberland County Republicans Site</a></li>
-                    <li class="date-and-time">10/12/24 - 8:30am</li>
-                    <li class="location">Eastlyn Golf Course or Maurice Township Firehall (double check their site)</li>
-                </ul>
-            </div>
-
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>CCRRO Breakfast Meeting</strong></li>
-                    <li class="description">Hear messaging from local Republicans and meet local republicans<a href="https://www.ccrrogop.org/event-calendar">Cumberland County Republicans Site</a></li>
-                    <li class="date-and-time">10/26/24 - 8:30am</li>
-                    <li class="location">Eastlyn Golf Course or Maurice Township Firehall (double check their site)</li>
-                </ul>
-            </div>
-
-            <div class="event-card">
-                <ul class="event-info">
                     <li class="name"><strong>Vote!</strong></li>
                     <li class="description">Go vote</li>
-                    <li class="date-and-time">11/05/24 - 9 am</li>
+                    <li class="date-and-time">06/10/25</li>
                     <li class="location">Check where your voting location is</li>
                 </ul>
             </div>
