--- a/child_pages/cc-elections/millville_commissioners_2024.html
+++ b/child_pages/cc-elections/millville_commissioners_2024.html
@@ -42,6 +42,7 @@
                             <div class="nested-burger-links">
                                 <li class="link"><a href="../cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a></li>
                                 <li class="link"><a href="../cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a></li>
+
                                 <!-- <li class="link"><a href="../cc-elections/commercial_township_committee.html">Commercial Township Committee</a></li>
                                 <li class="link"><a href="../cc-elections/downe_township_committee.html">Downe Township Committee</a></li>
                                 <li class="link"><a href="../cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a></li> -->
@@ -54,17 +55,17 @@
                             </div>
                         </div>
 
-                        <!-- <div class="accordion">
+                        <div class="accordion">
                             <input type="checkbox" name="accordion" id="second">
                             <label for="second">School Board Elections</label>
                             <div class="nested-burger-links">
-                                <li class="link"><a href="../cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
+                                <!-- <li class="link"><a href="../cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
                                 <li class="link"><a href="../cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a></li>
                                 <li class="link"><a href="../cc-elections/fairfield_school_board_2024.html">Fairfield Township School Board</a></li>
-                                <li class="link"><a href="../cc-elections/lawrence_school_board_2024.html">Lawrence Township School Board</a></li>
+                                <li class="link"><a href="../cc-elections/lawrence_school_board_2024.html">Lawrence Township School Board</a></li> -->
                                 <li class="link"><a href="../cc-elections/vsb_2024.html">Vineland School Board</a></li>
                             </div>
-                        </div> -->
+                        </div>
 
                         <div class="accordion">
                             <input type="checkbox" name="accordion" id="third">
@@ -86,7 +87,10 @@
                             <label for="fourth">Issues</label>
                             <div class="nested-burger-links">
                                 <li class="link"><a href="../cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
-                                <li class="link"><a href="../cc-elections/millville_city_issues.html">Millville City Issues</a></li>
+                                <li class="link"><a href="../cc-elections/cc_election_issues.html">Millville City Issues</a></li>
+                                <li class="link"><a href="../cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a></li>
+
+
                                 <!-- <li class="link"><a href="../cc-elections/commercial_township_issues.html">Commercial Township Issues</a></li>
                                 <li class="link"><a href="../cc-elections/downe_township_issues.html">Downe Township Issues</a></li>
                                 <li class="link"><a href="../cc-elections/lawrence_township_issues.html">Lawrence Township Issues</a></li> -->
