--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
                             <div class="nested-burger-links">
                                 <li class="link"><a href="child_pages/cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/millville_city_issues.html">Millville City Issues</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a></li>
+
                                 <!-- <li class="link"><a href="child_pages/cc-elections/commercial_township_issues.html">Commercial Township Issues</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/downe_township_issues.html">Downe Township Issues</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/lawrence_township_issues.html">Lawrence Township Issues</a></li> -->
@@ -351,6 +353,8 @@
                     <div class="county-dropdown-links">
                         <a href="child_pages/cc-elections/cc_election_issues.html">Cumberland County Issues</a>
                         <a href="child_pages/cc-elections/millville_city_issues.html">Millville City Issues</a>
+                        <a href="child_pages/cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a>
+
                         <!-- <a href="child_pages/cc-elections/commercial_township_issues.html">Commercial Township Issues</a>
                         <a href="child_pages/cc-elections/downe_township_issues.html">Downe Township Issues</a>
                         <a href="child_pages/cc-elections/lawrence_township_issues.html">Lawrence Township Issues</a> -->
